calculation TotalWorkHourseTable and chart

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -8,7 +8,10 @@
     ]
   },
   "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    //"src/**/*.spec.ts",
+    "src/**/*.d.ts",
+    //"src/main.ts",
+    // "src/app/app.module.ts",
+    // "src/environments/environment.development.ts"
   ]
 }
